@@ -1,3 +1,10 @@
+<%
+  if ENV['BEAKER_HYPERVISOR']
+    hypervisor = ENV['BEAKER_HYPERVISOR']
+  else
+    hypervisor = 'vagrant'
+  end
+-%>
 HOSTS:
   oel7:
     roles:
@@ -6,8 +13,8 @@ HOSTS:
       - client
       - mate_enabled
     platform:   el-7-x86_64
-    box:        elastic/oel-7-x86_64
-    hypervisor: vagrant
+    box:        onyxpoint/oel-7-x86_64
+    hypervisor: <%= hypervisor %>
     yum_repos:
       epel:
         mirrorlist: 'https://mirrors.fedoraproject.org/metalink?repo=epel-7&arch=$basearch'
@@ -18,3 +25,6 @@ CONFIG:
   log_level: verbose
   type: aio
   vagrant_memsize: 256
+<% if ENV['BEAKER_PUPPET_COLLECTION'] -%>
+  puppet_collection: <%= ENV['BEAKER_PUPPET_COLLECTION'] %>
+<% end -%>
